--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "ejs": "2.3.4",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
+    "ejs": "2.3.4",
     "include-all": "~0.1.6",
+    "lodash": "^4.6.1",
     "rc": "1.0.1",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9",
