--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "rc": "1.0.1",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.12.0"
+    "sails-mongo": "^0.12.0",
+    "socket.io": "^1.4.5"
   },
   "scripts": {
     "debug": "node debug app.js",
