Jobs auto update sockets working Enabled CORS

--- a/.jshintrc
+++ b/.jshintrc
@@ -73,9 +73,9 @@
     "assert" : true,
     "expect" : true,
     "sails": true,
-    "Artifact2": true,
-    "Artifact1": true,
-    "Artifact3": true,
+    "Jobs": true,
+    "Counter": true,
+    "Porters": true,
     "Artifact4": true,
     "Artifact5": true,
     "Artifact7": true,
