--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "2.3.4",
     "include-all": "~0.1.6",
     "lodash": "^4.6.1",
+    "moment": "^2.11.2",
     "rc": "1.0.1",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9",
